--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -10178,6 +10178,8 @@ dcl#:#dcl_tableviews#:#Views
 dcl#:#dcl_tableviews_table#:#Views of Selected Table
 dcl#:#dcl_tableview#:#View
 dcl#:#dcl_detailed_view#:#Single View
+dcl#:#dcl_edit_view#:#Edit View
+dcl#:#dcl_create_view#:#Create View
 dcl#:#dcl_tableview_add#:#Add New View
 dcl#:#dcl_delete_views#:#Delete Views
 dcl#:#dcl_delete_tables#:#Delete Tables
