add translations for cloze question

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -14,6 +14,17 @@
 // to the corresponding mode!
 // Language file names refer to ISO 639, see: http://www.oasis-open.org/cover/iso639a.html
 <!-- language file start -->
+asq#:#asq_question_essay#:#Essayfrage
+asq#:#asq_question_cloze#:#Lückentextfrage
+asq#:#asq_question_ordering_text#:#Textordnungsfrage
+asq#:#asq_label_cloze_text#:#Lückentextfrage
+asq#:#asq_description_cloze_text#:#Um eine Lücke in den Text einzufügen, setzen Sie den Cursor an die entsprechende Position und nutzen Sie die Schaltfläche "Textlücke". Anschließend stehen weiter unten entsprechende Bearbeitungsbereiche zur Verfügung. Ebenso können Sie die Lücken zur Bearbeitung im Lückentext direkt anklicken.
+asq#:#asq_label_gap_type#:#Typ
+asq#:#asq_label_gap_items#:#Werte
+asq#:#asq_header_value#:#Antwort-Text
+asq#:#asq_label_gap_type_dropdown#:#Auswahl-Lücke
+asq#:#asq_label_gap_type_text#:#Textlücke
+asq#:#asq_label_gap_type_number#:#Numerische Lücke
 asq#:#asq_parse_question#:#Frage analysieren
 asq#:#asq_info_question#:#Sie definieren Variablen durch die Angabe von $v1, $v2 ... $vn, Ergebnisfelder mit $r1, $r2 .... $rn an den gewünschten Positionen im Text. Klicken Sie dann auf die Schaltfläche "Frage analysieren", um Bearbeitungsformulare für alle Variablen und Ergebnisse zu erzeugen.
 asq#:#asq_info_results#:#Erlaubt ist die Verwendung von bereits definierten Variablen ($v1 bis $vn), von bereits definierten Ergebnissen (z.B. $r1), das beliebige Klammern von Ausdrücken, die mathematischen Operatoren + (Addition), - (Subtraktion), * (Multiplikation), / (Division), ^ (Potenzieren), die Verwendung der Konstanten 'pi' für die Zahl Pi und 'e‘ für die Eulersche Zahl, sowie die mathematischen Funktionen 'sin', 'sinh', 'arcsin', 'asin', 'arcsinh', 'asinh', 'cos', 'cosh', 'arccos', 'acos', 'arccosh', 'acosh', 'tan', 'tanh', 'arctan', 'atan', 'arctanh', 'atanh', 'sqrt', 'abs', 'ln', 'log'.
@@ -116,7 +127,7 @@ asq#:#asq_question_kprim_answer#:#Kprim Choice
 asq#:#asq_question_error_text#:#Fehler/Worte markieren
 asq#:#asq_question_image_map#:#Hotspot/Imagemap
 asq#:#asq_question_numeric#:#Numerische Antwort
-asq#:#asq_question_formula#:#WIP Formelfrage
+asq#:#asq_question_formula#:#Formelfrage
 asq#:#asq_question_text_subset#:#Begriffe benennen
 asq#:#asq_question_ordering#:#Anordnungsfrage
 asq#:#asq_question_file_upload#:#Datei hochladen
