--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -10348,14 +10348,14 @@ dcl#:#dcl_tableviews#:#Ansichten
 dcl#:#dcl_tableviews_table#:#Ansichten der ausgewählten Tabelle
 dcl#:#dcl_tableview#:#Ansicht
 dcl#:#dcl_detailed_view#:#Einzelansicht
-dcl#:#dcl_edit_view#:#Ansicht bearbeiten
-dcl#:#dcl_create_view#:#Ansicht erstellen
+dcl#:#dcl_edit_entry_rules#:#Bearbeitungsregeln definieren
+dcl#:#dcl_create_entry_rules#:#Erstellungsregeln definieren
 dcl#:#dcl_tableview_add#:#Neue Ansicht hinzufügen
-dcl#:#dcl_tableview_create_fieldtitle#:#Feld-Titel
-dcl#:#dcl_tableview_create_locked#:#Gesperrt
-dcl#:#dcl_tableview_create_required#:#Verpflichtend
-dcl#:#dcl_tableview_create_default_value#:#Standardwert
-dcl#:#dcl_tableview_create_visible#:#Sichtbar
+dcl#:#dcl_tableview_fieldtitle#:#Feld-Titel
+dcl#:#dcl_tableview_locked#:#Gesperrt
+dcl#:#dcl_tableview_required#:#Verpflichtend
+dcl#:#dcl_tableview_default_value#:#Standardwert
+dcl#:#dcl_tableview_visible#:#Sichtbar
 dcl#:#dcl_delete_views#:#Ansichten löschen
 dcl#:#dcl_delete_tables#:#Tabellen löschen
 dcl#:#dcl_msg_tableview_updated#:#Ansicht aktualisiert
